--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #ebc908;
-  --primary-text: #1a1a1a;
-  --secondary: #ff1dec;
+  --primary: #fb93ff;
+  --primary-text: #ffffff;
+  --secondary: #1dc7ff;
   --secondary-text: #ffffff;
-  --accent: #505050;
+  --accent: #fffc3a;
   --accent-text: #ffffff;
 }
