--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -3,6 +3,6 @@
   --primary-text: #ffffff;
   --secondary: #1dc7ff;
   --secondary-text: #ffffff;
-  --accent: #fffc3a;
+  --accent: #3abdff;
   --accent-text: #ffffff;
 }
